[gd_scene load_steps=11 format=2]

[ext_resource path="res://entities/tank/Tank.gd" type="Script" id=1]
[ext_resource path="res://entities/tank/plum.png" type="Texture" id=2]
[ext_resource path="res://entities/tank/barrel.png" type="Texture" id=3]
[ext_resource path="res://entities/tank/puff.png" type="Texture" id=4]
[ext_resource path="res://entities/tank/tank.png" type="Texture" id=5]
[ext_resource path="res://sfx/hit.wav" type="AudioStream" id=6]
[ext_resource path="res://sfx/bang.wav" type="AudioStream" id=7]
[ext_resource path="res://sfx/upgrade.wav" type="AudioStream" id=8]
[ext_resource path="res://sfx/rocket.wav" type="AudioStream" id=9]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[node name="Tank" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 49.0441, 485.834 )
collision_layer = 2
collision_mask = 15
script = ExtResource( 1 )

[node name="RocketExhaust" type="CPUParticles2D" parent="."]
position = Vector2( 0, 31.9999 )
rotation = 1.5708
lifetime = 0.34
texture = ExtResource( 2 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 300.0
scale_amount_curve = SubResource( 1 )
color = Color( 0.196078, 1, 0.239216, 1 )

[node name="Barrel" type="Sprite" parent="."]
visible = false
position = Vector2( 12.9358, 0.193298 )
texture = ExtResource( 3 )
offset = Vector2( 11, 0 )

[node name="BarrelEnd" type="Node2D" parent="Barrel"]
position = Vector2( 25.0521, 0 )

[node name="ExhaustPipe" type="Node2D" parent="."]
position = Vector2( -23.026, -7.47925 )
rotation = -1.5708

[node name="IdleExhaust" type="CPUParticles2D" parent="ExhaustPipe"]
amount = 3
lifetime = 0.5
local_coords = false
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 1.0
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
angular_velocity = 20.0
angular_velocity_random = 1.0
linear_accel = -0.5
scale_amount = 0.5
color = Color( 0.0196078, 0.301961, 0.0352941, 1 )

[node name="DriveExhaust" type="CPUParticles2D" parent="ExhaustPipe"]
emitting = false
amount = 6
lifetime = 0.5
local_coords = false
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 1.0
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
angular_velocity = 20.0
angular_velocity_random = 1.0
linear_accel = -0.5
scale_amount = 0.5
color = Color( 0.0196078, 0.301961, 0.0352941, 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 4, 0 )
polygon = PoolVector2Array( -30.4629, 18.4284, -17.5246, 31.4398, 9.40789, 31.4064, 22.5064, 18.3675, 22.5064, 11.5206, -6.3103, -27.5964, -17.6822, -26.8819, -17.4305, -5.48355, -24.3296, -1.83112, -30.4629, 11.5572 )

[node name="MainBody" type="Sprite" parent="."]
texture = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
editor_draw_drag_margin = true

[node name="BarrelCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DamageFlash" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="SndHit" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -49.0441, -485.834 )
stream = ExtResource( 6 )

[node name="SndShoot" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="SndUpgrade" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="SndRocket" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[connection signal="timeout" from="BarrelCooldown" to="." method="_on_BarrelCooldown_timeout"]
[connection signal="timeout" from="DamageFlash" to="." method="_on_DamageFlash_timeout"]
[connection signal="finished" from="SndRocket" to="." method="_on_SndRocket_finished"]
